@@ -93,7 +93,7 @@
       "flag": "FLAG_HIDE_SOOTOPOLIS_CITY_MAN_1"
     },
     {
-      "graphics_id": "OBJ_EVENT_GFX_STEVEN",
+      "graphics_id": "OBJ_EVENT_GFX_WALLACE",
       "x": 20,
       "y": 36,
       "elevation": 3,
