@@ -7,6 +7,7 @@ Better AI switching
 3.6kb more storage available for saving
 Repeatable medicine
 Champion switched to Steven
+	- Rematch 8th gym leader Wallace (buffed team as well for rematches)
 Mawile as intro pokemon
 Remove low HP sounds
 Trade with FRLG before becoming champion
